# WasmTests

TestWasmScripts/: Cargo.toml  compileScript.sh  compileScriptWasi.sh
TestWasmScripts/testScripts1/: Cargo.toml  testScript1.rs
TestWasmScripts/testScripts2/: Cargo.toml  testScript2.rs
WasmtimeTest/: Cargo.toml  wasm_crate1.wasm  wasm_crate2.wasm
WasmtimeTest/src/: main.rs
