[workspace]
members = [
    "testScripts1",
    "testScripts2"
]

edition = "2021"

[workspace.dependencies]
proc-macro2 = "1.0.66"
syn = "2.0.28"
memoffset = "0.9.0"
bevy_app = { path = "../../bevy/crates/bevy_app"}
bevy_ecs = { path = "../../bevy/crates/bevy_ecs"}
bevy_derive = { path = "../../bevy/crates/bevy_derive"}
bevy_transform = { path = "../../bevy/crates/bevy_transform"}