[package]
name = "testScript1"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_crate1"
path = "testScript1.rs"
crate-type = ["cdylib"]

[build-dependencies]
proc-macro2.workspace = true
syn.workspace = true

[profile.release]
debug = true

[dependencies]
memoffset.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true
bevy_transform.workspace = true